--- a/usr/lsadeps/Lsadeps.texi
+++ b/usr/lsadeps/Lsadeps.texi
@@ -6,7 +6,7 @@
 
 @c Constants
 @set name lsadeps
-@set version V2.1
+@set version V4.0
 @set nameversion @value{name} @value{version}
 
 @c General format
@@ -34,18 +34,20 @@ Alternatively it checks redundants "with" clauses between specs and bodies.
 @chapter Command line arguments
 
 @verbatim
-Usage: lsadeps [ <display> ] [ <revert_mode> ] [ <file_mode> ] [ <include_dirs> ] <target>
+Usage: lsadeps [ <display> ] [ <revert> ] [ <file_mode> ] [ <dirs> ] <target>
    or: lsadeps <check> [ <path> ]
    or: lsadeps -v | --version | -h | --help
   <display>       ::= <list> | <tree> // Default: list
     <list>        ::= -l | --list     // List dependencies
     <tree>        ::= -t | --tree     // Tree of dependencies
-  <revert_mode>   ::= -r | --revert   // List units depending on target
+  <revert>        ::= -r | --revert   // List units depending on target
                                       //   i.o. units withed by target
   <file_mode>     ::= -f | --files    // Show files i.o. units
-  <include_dirs>  ::= { -I <dir> | --directory=<dir> }
+  <dirs>          ::= { <include_dir> | <recursive_dir> }
+  <include_dir>   ::= -I <dir> | --include=<dir>   // Include <dir>
+  <recursive_dir> ::= -R <dir> | --recursive=<dir> // Include <dir> and subdirs
   <target>        ::= <unit>
-  <check>         ::= -c | --check    // Detects redundant withs
+  <check>         ::= -c | --check    // Detects redundant withs in a dir
 @end verbatim
 
 @node Output, Design, Usage, Top
@@ -59,11 +61,17 @@ There are 2 different modes of output of dependancies:
 @end itemize
 With option "file", lists the files (specs/bodies/sub-units) instead of units.@*
 With option "revert", list all the [<path>/]<unit> that with (directly
-or not) the <target>, which must be a unit.@*
-Local units are listed first, then "remote" ones in alphabetical order.
+or not) the <target>, which must be a unit. The search ends when reacing a withing
+non-standalone body or a subunit.@*
 @sp 1
-By default the search is restricted to local directory, but additional
-directories can be added to search path.
+In list mode local units are listed first, then "remote" ones in the order of the
+include directives and they are sorted by alphapbetical order.
+In tree mode the units appear in the same order as in the "with" directives.
+@sp 1
+By default the search is restricted to local directory and target directory, but
+additional directories can be added to search path, either individually or
+recursively. In this case all the units with the same name are processed similarly
+(they are all considered to depend on or to be dependent from current unit).
 @section Check redundant "with" and "use"
 This funtion checks that no redundant "with" and "use" clause appear
 in the body and sub-units of each unit.@*
@@ -75,8 +83,8 @@ and with 0 otherwise.
 @section Parse and check arguments
 @itemize @minus
 @item in non check mode target is a unit (possibly containing a path) 
-@item in check mode an optional path denotes the directory to check
-@item include dirs must exist
+@item in check mode it is an optional path that denotes the directory to check
+@item include dirs (recursive or not) must exist
 @end itemize
 
 @section Parse ada sources
@@ -85,7 +93,8 @@ store in a list:
 @itemize @minus
 @item kind: UnitSpec/UnitBody/SubUnit (US/UB/SU)
 @item Unit_Name, Mixed_Str.
-@item Full file path and name
+@item Path of the unit (directory where it is located)
+@item File name
 @item StandAlone indicator, boolean, if spec without body or body without spec
 @item Unit_Name of parent (if child spec, child body or subunit)
 @item List of withed unit names: @@Name@@Name...@@
@@ -93,16 +102,17 @@ store in a list:
 @item List of subunits names (if body or subunit): @@Name@@Name...@@
 @end itemize
 @*
-"Unit_Name#Kind" is the unique access key, a duplicated key (remote unit hidden
-by a local or remote unit) is discarded.@*
+"Path/Unit_Name#Kind" is the unique access key.
 A spec, its body and its subunits must be colocated.@*
 No check that withed units exist but check that target is listed (as spec or
 standalone body).
+Also store in a list, for each Unit_Name, the list of paths where such unit exists.
 
 @section Check redundant "with" and "use"
 For each unit build the tree of its parents (sub-unit -> body -> spec) and for
 each unit make the list of its withed units.@*
-For each unit check that no withed unit is already withed by a parent.@*
+For each unit U check that no withed unit W is withed twice by U or by a parent of U, 
+including indirect with of a child of W.@*
 Exit program.
 
 @section Build tree
@@ -115,7 +125,7 @@ unit - ParentUnit
      - WithsOfSububits
 @end verbatim
 If in reverse mode, build a unique list of units that list targets, of units that list these
-units...
+units. Stop recursive search when reaching a non-standalone body or a subunit.
 
 @section Display output
 In unit mode, only show specs and standalone bodies, otherwise (file mode) show
