--- a/HISTORY.texi
+++ b/HISTORY.texi
@@ -20,7 +20,9 @@
 @end ifnothtml
 
 @table @asis
-
+ 
+@item 2011/08/25
+Add option for dependency between spcs only in lsadeps, V6.0
 @item 2011/08/24
 Add co-located units hidding remote ones in lsadeps, V5.0
 @item 2011/08/23
